--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "axios": "^1.2.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-axios": "^0.17.1",
